<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity" >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="32sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/editPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:autofillHints="name"
            android:hint="@string/playerName"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:autofillHints="name"
            android:hint="@string/teamName"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/nationalitySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/nationalities"
            android:padding="5dp"
            android:layout_margin="3dp"
            android:minHeight="48dp"/>

        <RadioGroup
            android:id="@+id/positionRadioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/strikerRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/striker" />
            <RadioButton
                android:id="@+id/wingerRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/winger" />
            <RadioButton
                android:id="@+id/attackingMidfielderRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attackingMidfielder" />
            <RadioButton
                android:id="@+id/centralMidfielderRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centralMidfielder" />
            <RadioButton
                android:id="@+id/holdingMidfielderRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holdingMidfielder" />
            <RadioButton
                android:id="@+id/fullBackRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullBack" />
            <RadioButton
                android:id="@+id/centerBackRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centerBack" />
            <RadioButton
                android:id="@+id/goalkeeperRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goalkeeper" />
        </RadioGroup>


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:numStars="5"
            android:stepSize="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"/>

    </LinearLayout>
</ScrollView>